# calendar_planning_agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  PROGRAMMER_MANUAL.md  README.md  demo_busy_blocks_may_2026.ics  google_credential.json  pyproject.toml  requirements.txt  test_user_credentials.json
.github/workflows/: ci.yml
config/: settings.py
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  EXPERIMENTAL_SETUP.md  KANE_STATUS.md  LLM_INTEGRATION_TEST_TRACE.md  PERFORMANCE.md  PIPELINE_UNIT_TEST_TRACE.md  PROJECT_PLAN.md  REPRODUCIBILITY.md  STATUS.md  TROUBLESHOOTING.md  WILL_IMPLEMENTATION_GUIDE.md  WILL_STATUS.md
docs/archive/: KANE_STATUS.md  PROJECT_PLAN.md  WILL_IMPLEMENTATION_GUIDE.md  WILL_STATUS.md
src/: app.py
src/calendar_api/: auth.py  events.py  free_slots.py  mock_calendar.py
src/frontend/: approval_controls.py  calendar_events.py  calendar_html.py  debug_panel.py  intake_form.py  schedule_display.py  task_breakdown.py
src/llm_client/: client.py
src/orchestration/: debug_trace.py  graph.py  state.py
src/validator/: constraints.py
tests/: test_app.py  test_calendar_api.py  test_calendar_html.py  test_frontend.py  test_llm_client.py  test_orchestration.py
tests/llm_integration/: conftest.py  test_critic_real.py  test_decompose_real.py  test_rationale_real.py  test_revision_real.py
tests/pipeline_unit/: conftest.py  mock_calendars.py  test_decomposition_subtasks.py  test_heuristic_deadline_first.py  test_heuristic_energy_aware.py  test_heuristic_fragmentation.py  test_rationale_quality.py  test_structural_tags.py
(+22 files in other folders)
