[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calendar-planning-agent"
version = "0.1.0"
description = "A Calendar Augmentation Agent that decomposes goals into subtasks and schedules them on Google Calendar."
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32.0,<2.0",
    "langgraph>=1.0.0,<2.0",
    "langchain-core>=0.3.0,<1.0",
    "anthropic>=0.30.0,<1.0",
    "google-api-python-client>=2.100.0,<3.0",
    "google-auth-httplib2>=0.2.0,<1.0",
    "google-auth-oauthlib>=1.2.0,<2.0",
    "python-dotenv>=1.0.0,<2.0",
    "pydantic>=2.5.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0",
    "pytest-asyncio>=0.23.0,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]
